Some more examples.